--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -3,19 +3,29 @@
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.footer {
+.content {
+  height: 85vh;
+  width: 80vw;
   display: flex;
-  flex: 1;
-  padding: 2rem 0;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.header {
+  border-bottom: 1px solid #eaeaea;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer {
   border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
@@ -28,21 +38,19 @@
   flex-grow: 1;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
 .title {
-  margin: 0;
+  font-family: "Taruno";
+  margin-bottom: 3rem;
   line-height: 1.15;
   font-size: 4rem;
+  text-align: center;
+  color: rgb(139, 98, 164);
+  text-shadow: 3px 3px white;
+}
+
+.title2 {
+  font-family: "Taruno";
+  font-size: 2rem;
 }
 
 .title,
