--- a/styles/Currency.module.scss
+++ b/styles/Currency.module.scss
@@ -1,6 +1,7 @@
 .currencyBar {
     height: 5vh;
     width: 50vw;
+    margin: 0.5rem;
     display: flex;
     align-items: center;
     justify-content: space-around;
