--- a/styles/Graph.module.scss
+++ b/styles/Graph.module.scss
@@ -1,10 +1,14 @@
 .stocks {
-    width: 90vw;
+    width: 80vw;
+    height: fit-content;
+    margin: 1rem;
     display: flex;
     justify-content: space-around;
   }
 
   .extras {
+    height: 70vh;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
   }
