--- a/styles/Summary.module.scss
+++ b/styles/Summary.module.scss
@@ -1,7 +1,7 @@
 .summary {
-    height: 30vh;
-    width: 25vw;
-    padding: 1rem;
+    height: 25vh;
+    width: 20vw;
+    padding: 0.5rem 2rem;
     border-radius: 1rem;
     background-color: whitesmoke;
     color: black;
