--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -3,7 +3,8 @@
 }
 
 .main {
-  height: 90vh;
+  height: fit-content;
+  padding: 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -11,8 +12,9 @@
 }
 
 .content {
-  height: 40vh;
+  height: fit-content;
   width: 80vw;
+  padding: 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -22,26 +24,25 @@
 .header {
   display: flex;
   border-bottom: 1px solid #eaeaea;
+  margin-bottom: 0.5rem;
   justify-content: center;
   align-items: center;
 }
 
 .footer {
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
+  width: 100vw;
+  border-top: 1px solid #fff9f9;
+  margin-top: 0.5rem;
+  padding: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-grow: 1;
 }
 
 .title {
   font-family: "Taruno";
-  margin-bottom: 3rem;
+  height: 20vh;
+  margin-top: 30vh;
   line-height: 1.15;
   font-size: 4rem;
   text-align: center;
@@ -127,7 +128,7 @@
 @media (prefers-color-scheme: dark) {
   .card,
   .footer {
-    border-color: #222;
+    border-color: rgb(250, 247, 247);
   }
   .code {
     background: #111;
