--- a/styles/Suggested.module.scss
+++ b/styles/Suggested.module.scss
@@ -1,6 +1,7 @@
 .suggested {
     height: fit-content;
     width: 20vw;
+    margin: 1rem;
     padding: 0.5rem 2rem;
     border-radius: 1rem;
     background-color: whitesmoke;
