--- a/styles/Summary.module.scss
+++ b/styles/Summary.module.scss
@@ -1,6 +1,7 @@
 .summary {
     height: 25vh;
     width: 20vw;
+    margin: 1rem;
     padding: 0.5rem 2rem;
     border-radius: 1rem;
     background-color: whitesmoke;
