--- a/styles/Graph.module.scss
+++ b/styles/Graph.module.scss
@@ -7,8 +7,9 @@
   }
 
   .extras {
-    height: 70vh;
+    height: fit-content;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
   }
